--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "illuminate/collections",
+    "name": "guanhui07/collections",
     "description": "The Illuminate Collections package.",
     "license": "MIT",
     "homepage": "https://laravel.com",
